# opicrawler

./: .gitignore  LICENSE  README.md  pyproject.toml
src/opicrawler/: __init__.py  __main__.py  async_ai_extraction.py  async_memoize.py  async_requests.py  async_screenshots.py  console_args.py  eyecandy.py  filepath_utils.py  json_structure.py  logging.py  main.py  orm.py  post_install.py  preprocess.py  report.py
tests/: conftest.py  test_coalescence.py  test_console_output.py  test_filename_safety.py
